--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>登录</title>
 </head>
 <body>
-<form action="/login">
+<form action="/product/selectById">
     用户名: <input type="text" name="loginname"  value="admin">
     密码: <input type="text" name="password" value="admin" >
     <input type="submit" value="提交">
