--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -357,7 +357,7 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="m-0 text-dark">筛选条件</h1>
+                        <h1 class="ml-lg-3 text-dark">筛选条件</h1>
                     </div><!-- /.col -->
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
@@ -386,7 +386,10 @@
             <div class="container-fluid">
                 <!--鞋-->
                 <div id="shoe-1">
-                <h4>登山鞋</h4>
+                    <div class="ml-lg-3">
+                        <h4>登山鞋</h4>
+                    </div>
+
                 <div class="row">
 
                             <div class="col-lg-3"><a href="goods/e-commerce.html">
@@ -438,7 +441,9 @@
 
                 <!--鞋-->
                 <div id="shoe-2">
-                    <h4>运动</h4>
+                    <div class="ml-lg-3">
+                        <h4>运动鞋</h4>
+                    </div>
                     <div class="row">
 
                         <div class="col-lg-3"><a href="goods/e-commerce.html">
