--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -205,7 +205,7 @@
                          with font-awesome or any other icon font library -->
                     <li class="nav-item has-treeview menu-open">
                         <a href="#" class="nav-link active bg-gradient-gray-dark">
-                            <i class="nav-icon fas fa-shopping-basket"></i>
+                            <i class="nav-icon fas fa-male"></i>
                             <p>
                                 男 装
                                 <i class="right fas fa-angle-left"></i>
@@ -240,7 +240,7 @@
                     </li>
                     <li class="nav-item has-treeview">
                         <a href="#" class="nav-link active bg-gradient-gray-dark">
-                            <i class="nav-icon fas fa-shopping-basket"></i>
+                            <i class="nav-icon fas fa-female"></i>
                             <p>
                                 女 装
                                 <i class="right fas fa-angle-left"></i>
@@ -275,7 +275,7 @@
                     </li>
                     <li class="nav-item has-treeview">
                         <a href="#" class="nav-link active bg-gradient-gray-dark">
-                            <i class="nav-icon fas fa-shopping-basket"></i>
+                            <i class="nav-icon fas fa-child"></i>
                             <p>
                                 童 装
                                 <i class="right fas fa-angle-left"></i>
