--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -374,12 +374,12 @@
         <!--商品分类-->
 
       <div class="row btn-group-lg">
-          <button type="button" class=" btn btn-block btn-default">分类1</button>
-          <button type="button" class="col-lg-2 btn btn-block btn-default">分类2</button>
-          <button type="button" class="col-lg-2 btn btn-block btn-default">分类3</button>
-          <button type="button" class="col-lg-2 btn btn-block btn-default">分类4</button>
-          <button type="button" class="col-lg-2 btn btn-block btn-default">分类5</button>
-          <button type="button" class="col-lg-2 btn btn-block btn-default">分类6</button>
+          <button type="button" class="col-2 btn btn-default">分类1</button>
+          <button type="button" class="col-lg-2 btn btn-default">分类2</button>
+          <button type="button" class="col-lg-2 btn  btn-default">分类3</button>
+          <button type="button" class="col-lg-2 btn btn-default">分类4</button>
+          <button type="button" class="col-lg-2 btn  btn-default">分类5</button>
+          <button type="button" class="col-lg-2 btn  btn-default">分类6</button>
           <div>
         <!--商品列表-->
         <div class="content">
