增加了访问卖家页面/联系卖家接口

--- a/src/main/resources/templates/goods/e-commerce.html
+++ b/src/main/resources/templates/goods/e-commerce.html
@@ -33,7 +33,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="nav-icon fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">主页</a>
+        <a href="../goods.html" class="nav-link">主页</a>
       </li>
 
 
@@ -332,8 +332,8 @@
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">E-commerce</li>
+              <li class="breadcrumb-item"><a href="#"><i class="nav-icon fas fa-2x fa-house-user">卖家主页</i></a></li>
+              <li class="breadcrumb-item"><a href="#"><i class="nav-icon fas fa-2x fa-comment-alt">联系卖家</i></a></li>
             </ol>
           </div>
         </div>
