--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -15,7 +15,7 @@
     <link href="../static/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet">
 </head>
-<body class="hold-transition sidebar-mini">
+<body class="hold-transition sidebar-mini-md">
 <div class="wrapper">
 
     <!-- Navbar -->
@@ -193,9 +193,7 @@
                 <div class="image">
                     <img src="../static/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                 </div>
-                <div class="info">
-                    <a href="#" class="d-block">Alexander Pierce</a>
-                </div>
+
             </div>
 
             <!-- Sidebar Menu -->
@@ -238,9 +236,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item has-treeview">
+                    <li class="nav-item has-treeview menu-open">
                         <a href="#" class="nav-link active bg-gradient-gray-dark">
-                            <i class="nav-icon fas fa-female"></i>
+                            <i class="nav-icon fas fa-female "></i>
                             <p>
                                 女 装
                                 <i class="right fas fa-angle-left"></i>
@@ -273,7 +271,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item has-treeview">
+                    <li class="nav-item has-treeview menu-open">
                         <a href="#" class="nav-link active bg-gradient-gray-dark">
                             <i class="nav-icon fas fa-child"></i>
                             <p>
@@ -308,7 +306,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item has-treeview">
+                    <li class="nav-item has-treeview menu-open">
                         <a href="#" class="nav-link active bg-gradient-dark">
                             <i class="nav-icon fas fa-mobile"></i>
                             <p>
@@ -357,14 +355,9 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="ml-lg-3 text-dark">筛选条件</h1>
+                        <h1 class="ml-lg-2 text-dark">男鞋</h1>
                     </div><!-- /.col -->
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">Starter Page</li>
-                        </ol>
-                    </div><!-- /.col -->
+
                 </div><!-- /.row -->
             </div><!-- /.container-fluid -->
         </div>
@@ -372,20 +365,68 @@
 
         <!-- Main content -->
         <!--商品分类-->
+        <div class="col-10 m-auto">
 
-      <div class="row btn-group-lg">
-          <button type="button" class="col-2 btn btn-default">分类1</button>
-          <button type="button" class="col-lg-2 btn btn-default">分类2</button>
-          <button type="button" class="col-lg-2 btn  btn-default">分类3</button>
-          <button type="button" class="col-lg-2 btn btn-default">分类4</button>
-          <button type="button" class="col-lg-2 btn  btn-default">分类5</button>
-          <button type="button" class="col-lg-2 btn  btn-default">分类6</button>
-          <div>
+                <!-- /.card-header -->
+
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="https://placehold.it/300x100/39CCCC/ffffff&text=I+Love+Bootstrap" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="https://placehold.it/300x100/3c8dbc/ffffff&text=I+Love+Bootstrap" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="https://placehold.it/300x100/f39c12/ffffff&text=I+Love+Bootstrap" alt="Third slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+
+                <!-- /.card-body -->
+
+            <!-- /.card -->
+        </div>
+        <!-- /.col -->
+        <div class="col-lg-8 m-auto mt-lg-3">
+        <div class="card card-blue">
+            <div class="card-title bg-gray"><h5>筛选</h5></div>
+           <ul>
+
+           </ul>
+
+            </div>
+            </div>
+
+
+
         <!--商品列表-->
         <div class="content">
+            <!-- START ACCORDION & CAROUSEL-->
+
+                <!-- /.col -->
+
+
+            <!-- /.row -->
+            <!-- END ACCORDION & CAROUSEL-->
             <div class="container-fluid">
                 <!--鞋-->
+
                 <div id="shoe-1">
+
                     <div class="ml-lg-3">
                         <h4>登山鞋</h4>
                     </div>
@@ -514,6 +555,7 @@
         </div>
         <!-- /.content -->
     </div>
+
     <!-- /.content-wrapper -->
 
     <!-- Control Sidebar -->
