--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -133,7 +133,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown user-menu">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
+                <a href="./user/userInfomation.html" class="nav-link dropdown-toggle" data-toggle="dropdown">
                     <img src="../static/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="user-image img-circle elevation-2" alt="User Image">
                     <span class="d-none d-md-inline">Alexander Pierce</span>
                 </a>
@@ -164,7 +164,7 @@
                     </li>
                     <!-- Menu Footer-->
                     <li class="user-footer">
-                        <a href="#" class="btn btn-default btn-flat">Profile</a>
+                        <a href="./user/userInfomation.html" class="btn btn-default btn-flat">个人中心</a>
                         <a href="#" class="btn btn-default btn-flat float-right">Sign out</a>
                     </li>
                 </ul>
