--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -6,13 +6,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>商品</title>
     <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="../static/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../static/AdminLTE-3.0.5/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="/AdminLTE-3.0.5/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-    <link href="../static/icofont/icofont.min.css" rel="stylesheet">
-    <link href="../static/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="/icofont/icofont.min.css" rel="stylesheet">
+    <link href="/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini-md">
@@ -56,7 +56,7 @@
                     <a href="#" class="dropdown-item">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="../static/AdminLTE-3.0.5/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                            <img src="/AdminLTE-3.0.5/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     Brad Diesel
@@ -72,7 +72,7 @@
                     <a href="#" class="dropdown-item">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="../static/AdminLTE-3.0.5/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+                            <img src="/AdminLTE-3.0.5/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     John Pierce
@@ -88,7 +88,7 @@
                     <a href="#" class="dropdown-item">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="../static/AdminLTE-3.0.5/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+                            <img src="/AdminLTE-3.0.5/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     Nora Silvester
@@ -134,13 +134,13 @@
             </li>
             <li class="nav-item dropdown user-menu">
                 <a href="./user/userInfomation.html" class="nav-link dropdown-toggle" data-toggle="dropdown">
-                    <img src="../static/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="user-image img-circle elevation-2" alt="User Image">
+                    <img src="/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="user-image img-circle elevation-2" alt="User Image">
                     <span class="d-none d-md-inline">Alexander Pierce</span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                     <!-- User image -->
                     <li class="user-header bg-primary">
-                        <img src="../static/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                        <img src="/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
 
                         <p>
                             Alexander Pierce - Web Developer
@@ -180,8 +180,8 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-light-primary small-text elevation-4">
         <!-- Brand Logo -->
-        <a href="../static/AdminLTE-3.0.5/index3.html" class="brand-link">
-            <img src="../static/AdminLTE-3.0.5/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+        <a href="/AdminLTE-3.0.5/index3.html" class="brand-link">
+            <img src="/AdminLTE-3.0.5/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                  style="opacity: .8">
             <span class="brand-text font-weight-light">AdminLTE 3</span>
         </a>
@@ -191,7 +191,7 @@
             <!-- Sidebar user panel (optional) -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                 <div class="image">
-                    <img src="../static/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                    <img src="/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                 </div>
 
             </div>
@@ -435,7 +435,7 @@
 
                             <div class="col-lg-3"><a href="goods/e-commerce.html">
                                 <div class="position-relative">
-                                    <img src="../static/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
+                                    <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg">
                                         <div class="ribbon bg-success text-lg">
                                             上新
@@ -446,7 +446,7 @@
                         </div>
                             <div class="col-lg-3"><a href="goods/e-commerce.html">
                                 <div class="position-relative">
-                                    <img src="../static/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
+                                    <img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg hot">
                                         <div class="ribbon bg-danger text-lg ">
                                             热卖
@@ -457,7 +457,7 @@
                             </div>
                             <div class="col-lg-3"><a href="goods/e-commerce.html">
                                 <div class="position-relative">
-                                    <img src="../static/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
+                                    <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg">
                                         <div class="ribbon bg-danger text-lg">
                                             热卖
@@ -468,7 +468,7 @@
                             </div>
                         <div class="col-lg-3">
                             <div class="position-relative">
-                                <img src="../static/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
+                                <img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg">
                                     <div class="ribbon bg-warning text-lg">
                                         推广
@@ -489,7 +489,7 @@
 
                         <div class="col-lg-3"><a href="goods/e-commerce.html">
                             <div class="position-relative">
-                                <img src="../static/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
+                                <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg">
                                     <div class="ribbon bg-success text-lg">
                                         上新
@@ -500,7 +500,7 @@
                         </div>
                         <div class="col-lg-3"><a href="goods/e-commerce.html">
                             <div class="position-relative">
-                                <img src="../static/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
+                                <img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg hot">
                                     <div class="ribbon bg-danger text-lg ">
                                         热卖
@@ -511,7 +511,7 @@
                         </div>
                         <div class="col-lg-3"><a href="goods/e-commerce.html">
                             <div class="position-relative">
-                                <img src="../static/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
+                                <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg">
                                     <div class="ribbon bg-danger text-lg">
                                         热卖
@@ -522,7 +522,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="position-relative">
-                                <img src="../static/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
+                                <img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg">
                                     <div class="ribbon bg-warning text-lg">
                                         推广
@@ -583,10 +583,10 @@
 <!-- REQUIRED SCRIPTS -->
 
 <!-- jQuery -->
-<script src="../static/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="../static/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../static/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
+<script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
 </body>
 </html>
