重新配置Spring Boot了-2

--- a/src/main/resources/templates/goods/details.html
+++ b/src/main/resources/templates/goods/details.html
@@ -10,16 +10,16 @@
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="../../static/AdminLTE-3.0.5/dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
 
-  <link rel="stylesheet" href="../../static/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="../../static/AdminLTE-3.0.5/dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="../https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-  <link href="../../static/icofont/icofont.min.css" rel="stylesheet">
-  <link href="../../static/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/icofont/icofont.min.css" rel="stylesheet">
+  <link href="/boxicons/css/boxicons.min.css" rel="stylesheet">
 
 </head>
 <body class="hold-transition sidebar-collapse">
@@ -63,7 +63,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../static/AdminLTE-3.0.5/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+              <img src="/AdminLTE-3.0.5/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Brad Diesel
@@ -79,7 +79,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../static/AdminLTE-3.0.5/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="/AdminLTE-3.0.5/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   John Pierce
@@ -95,7 +95,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../static/AdminLTE-3.0.5/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="/AdminLTE-3.0.5/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Nora Silvester
@@ -151,8 +151,8 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-light-primary small-text elevation-4">
     <!-- Brand Logo -->
-    <a href="../../static/AdminLTE-3.0.5/index3.html" class="brand-link">
-      <img src="../../static/AdminLTE-3.0.5/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+    <a href="/AdminLTE-3.0.5/index3.html" class="brand-link">
+      <img src="/AdminLTE-3.0.5/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
       <span class="brand-text font-weight-light">AdminLTE 3</span>
     </a>
@@ -162,7 +162,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="../../static/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block">Alexander Pierce</a>
@@ -350,14 +350,14 @@
             <div class="col-12 col-sm-6">
               <h3 class="d-inline-block d-sm-none">LOWA Men’s Renegade GTX Mid Hiking Boots Review</h3>
               <div class="col-12">
-                <img src="../../static/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
+                <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
               </div>
               <div class="col-12 product-image-thumbs">
-                <div class="product-image-thumb active"><img src="../../static/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Product Image"></div>
-                <div class="product-image-thumb" ><img src="../../static/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Product Image"></div>
-                <div class="product-image-thumb" ><img src="../../static/AdminLTE-3.0.5/dist/img/prod-3.jpg" alt="Product Image"></div>
-                <div class="product-image-thumb" ><img src="../../static/AdminLTE-3.0.5/dist/img/prod-4.jpg" alt="Product Image"></div>
-                <div class="product-image-thumb" ><img src="../../static/AdminLTE-3.0.5/dist/img/prod-5.jpg" alt="Product Image"></div>
+                <div class="product-image-thumb active"><img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Product Image"></div>
+                <div class="product-image-thumb" ><img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Product Image"></div>
+                <div class="product-image-thumb" ><img src="/AdminLTE-3.0.5/dist/img/prod-3.jpg" alt="Product Image"></div>
+                <div class="product-image-thumb" ><img src="/AdminLTE-3.0.5/dist/img/prod-4.jpg" alt="Product Image"></div>
+                <div class="product-image-thumb" ><img src="/AdminLTE-3.0.5/dist/img/prod-5.jpg" alt="Product Image"></div>
               </div>
             </div>
             <div class="col-12 col-sm-6">
@@ -438,12 +438,12 @@
 
               <div class="mt-4">
                 <div class="btn btn-primary btn-lg btn-flat">
-                  <i class="fas fa-cart-plus fa-lg mr-2"></i> 
+                  <i class="fas fa-cart-plus fa-lg mr-2"></i>
                   Add to Cart
                 </div>
 
                 <div class="btn btn-default btn-lg btn-flat">
-                  <i class="fas fa-heart fa-lg mr-2"></i> 
+                  <i class="fas fa-heart fa-lg mr-2"></i>
                   Add to Wishlist
                 </div>
               </div>
@@ -506,13 +506,13 @@
 <!-- ./wrapper -->
 
 <!-- jQuery -->
-<script src="../../static/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="../../static/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../../static/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
+<script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="../../static/AdminLTE-3.0.5/dist/js/demo.js"></script>
+<script src="/AdminLTE-3.0.5/dist/js/demo.js"></script>
 
 </body>
 </html>
