--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -433,7 +433,7 @@
 
                 <div class="row">
 
-                            <div class="col-lg-3"><a href="goods/e-commerce.html">
+                            <div class="col-lg-3"><a href="goods/details">
                                 <div class="position-relative">
                                     <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg">
@@ -444,7 +444,7 @@
                             </div>
                             </a>
                         </div>
-                            <div class="col-lg-3"><a href="goods/e-commerce.html">
+                            <div class="col-lg-3"><a href="goods/details">
                                 <div class="position-relative">
                                     <img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg hot">
@@ -455,7 +455,7 @@
                                 </div>
                             </a>
                             </div>
-                            <div class="col-lg-3"><a href="goods/e-commerce.html">
+                            <div class="col-lg-3"><a href="goods/details">
                                 <div class="position-relative">
                                     <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg">
@@ -487,7 +487,7 @@
                     </div>
                     <div class="row">
 
-                        <div class="col-lg-3"><a href="goods/e-commerce.html">
+                        <div class="col-lg-3"><a href="goods/details">
                             <div class="position-relative">
                                 <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg">
@@ -498,7 +498,7 @@
                             </div>
                         </a>
                         </div>
-                        <div class="col-lg-3"><a href="goods/e-commerce.html">
+                        <div class="col-lg-3"><a href="goods/details">
                             <div class="position-relative">
                                 <img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg hot">
@@ -509,7 +509,7 @@
                             </div>
                         </a>
                         </div>
-                        <div class="col-lg-3"><a href="goods/e-commerce.html">
+                        <div class="col-lg-3"><a href="goods/details">
                             <div class="position-relative">
                                 <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg">
