--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -33,9 +33,9 @@
         </ul>
 
         <!-- SEARCH FORM -->
-        <form class="form-inline ml-3">
+        <form class="form-inline ml-3" action="/goods/search?">
             <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="在此搜索商品" aria-label="Search">
+                <input name="name" class="form-control form-control-navbar" type="name" placeholder="在此搜索商品" aria-label="Search">
                 <div class="input-group-append">
                     <button class="btn btn-navbar" type="submit">
                         <i class="fas fa-search"></i>
