--- a/src/main/resources/templates/goods/details.html
+++ b/src/main/resources/templates/goods/details.html
@@ -33,7 +33,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="nav-icon fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="../goods.html" class="nav-link">主页</a>
+        <a href="/" class="nav-link">主页</a>
       </li>
 
 
