加入了搜索商品失败的界面，完成不同页面的数据传参

--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -32,8 +32,9 @@
 
         </ul>
 
+
         <!-- SEARCH FORM -->
-        <form class="form-inline ml-3" action="/goods/search?">
+        <form class="form-inline ml-3" action="/goods/search" target=_parent>
             <div class="input-group input-group-sm">
                 <input name="name" class="form-control form-control-navbar" type="name" placeholder="在此搜索商品" aria-label="Search">
                 <div class="input-group-append">
@@ -43,6 +44,7 @@
                 </div>
             </div>
         </form>
+
 
         <!-- Right navbar links -->
         <ul class="navbar-nav ml-auto">
