--- a/src/main/resources/templates/goods/details.html
+++ b/src/main/resources/templates/goods/details.html
@@ -438,30 +438,34 @@
 
               <div class="mt-4">
                 <div class="btn btn-primary btn-lg btn-flat">
-                  <i class="fas fa-cart-plus fa-lg mr-2"></i>
-                  Add to Cart
+                  <i class="fas fa-check fa-lg mr-2"></i>
+                  立即购买
                 </div>
 
                 <div class="btn btn-default btn-lg btn-flat">
-                  <i class="fas fa-heart fa-lg mr-2"></i>
-                  Add to Wishlist
+                  <i class="fas fa-cart-plus fa-lg mr-2"></i>
+                  加入购物车
+                </div>
+              </div>
+              <div class="card-title"><h4><i class="fas fa-share"></i>分享该商品</h4> </div>
+              <div>
+
+                <div class="mt-2 product-share">
+                  <a href="#" class="text-gray">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                  </a>
+                  <a href="#" class="text-gray">
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                  </a>
+                  <a href="#" class="text-gray">
+                    <i class="fas fa-envelope-square fa-2x"></i>
+                  </a>
+                  <a href="#" class="text-gray">
+                    <i class="fas fa-rss-square fa-2x"></i>
+                  </a>
                 </div>
               </div>
 
-              <div class="mt-4 product-share">
-                <a href="#" class="text-gray">
-                  <i class="fab fa-facebook-square fa-2x"></i>
-                </a>
-                <a href="#" class="text-gray">
-                  <i class="fab fa-twitter-square fa-2x"></i>
-                </a>
-                <a href="#" class="text-gray">
-                  <i class="fas fa-envelope-square fa-2x"></i>
-                </a>
-                <a href="#" class="text-gray">
-                  <i class="fas fa-rss-square fa-2x"></i>
-                </a>
-              </div>
 
             </div>
           </div>
