--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -403,24 +403,27 @@
                     </thead>
                     <tbody>
                     <tr>
-                      <td><img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
-                      iPad pro</td>
+                      <td><a href="goods/details">
+                        <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
+                        iPad pro</a></td>
                       <td>256G</td>
                       <td>1234.00</td>
                       <td>1</td>
                       <td>1234.00</td>
                     </tr>
                     <tr>
-                      <td><img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
-                        iPhone X Max</td>
+                      <td><a href="goods/details">
+                        <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
+                        iPhone X Max</a></td>
                       <td>64G</td>
                       <td>1234.00</td>
                       <td>1</td>
                       <td>1234.00</td>
                     </tr>
                     <tr>
-                      <td><img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
-                        记事本</td>
+                      <td><a href="goods/details">
+                        <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
+                        记事本</a></td>
                       <td>图案1</td>
                       <td>5.00</td>
                       <td>2</td>
@@ -469,9 +472,9 @@
                         <img  src="/img/yen-2x.png"><img> 平台余额
                         <span class="float-right text-muted text-sm">23.50</span>
                       </a>
-                      <a href="#" class="dropdown-item">
+                      <a href="/payBybalance" class="dropdown-item">
                         <img  src="/img/blank.png"><img>
-                        <span class="float-right text-muted text-sm">结算</span>
+                        <span  class="float-right text-muted text-sm">结算</span>
                       </a>
                       <a href="#" class="dropdown-item dropdown-footer">平台支付</a>
                     </div>
