--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>商品</title>
     <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="../static/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css"
+          th:href="@{/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css}">
     <!-- Theme style -->
-    <link rel="stylesheet" href="/AdminLTE-3.0.5/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="../static/AdminLTE-3.0.5/dist/css/adminlte.min.css"
+          th:href="@{/AdminLTE-3.0.5/dist/css/adminlte.min.css}">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link href="/icofont/icofont.min.css" rel="stylesheet">
@@ -435,7 +437,7 @@
 
                 <div class="row">
 
-                            <div class="col-lg-3"><a href="goods/details">
+                            <div class="col-lg-3"><a href="goods/e-commerce.html">
                                 <div class="position-relative">
                                     <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg">
@@ -446,7 +448,7 @@
                             </div>
                             </a>
                         </div>
-                            <div class="col-lg-3"><a href="goods/details">
+                            <div class="col-lg-3"><a href="goods/e-commerce.html">
                                 <div class="position-relative">
                                     <img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg hot">
@@ -457,7 +459,7 @@
                                 </div>
                             </a>
                             </div>
-                            <div class="col-lg-3"><a href="goods/details">
+                            <div class="col-lg-3"><a href="goods/e-commerce.html">
                                 <div class="position-relative">
                                     <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                     <div class="ribbon-wrapper ribbon-lg">
@@ -489,7 +491,7 @@
                     </div>
                     <div class="row">
 
-                        <div class="col-lg-3"><a href="goods/details">
+                        <div class="col-lg-3"><a href="goods/e-commerce.html">
                             <div class="position-relative">
                                 <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg">
@@ -500,7 +502,7 @@
                             </div>
                         </a>
                         </div>
-                        <div class="col-lg-3"><a href="goods/details">
+                        <div class="col-lg-3"><a href="goods/e-commerce.html">
                             <div class="position-relative">
                                 <img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg hot">
@@ -511,7 +513,7 @@
                             </div>
                         </a>
                         </div>
-                        <div class="col-lg-3"><a href="goods/details">
+                        <div class="col-lg-3"><a href="goods/e-commerce.html">
                             <div class="position-relative">
                                 <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Photo 1" class="img-fluid">
                                 <div class="ribbon-wrapper ribbon-lg">
