商品界面和个人中心连接

--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -168,7 +168,7 @@
                     </li>
                     <!-- Menu Footer-->
                     <li class="user-footer">
-                        <a href="./user/userInfomation.html" class="btn btn-default btn-flat">个人中心</a>
+                        <a href="/user/MyInformation" class="btn btn-default btn-flat">个人中心</a>
                         <a href="#" class="btn btn-default btn-flat float-right">Sign out</a>
                     </li>
                 </ul>
