--- a/src/main/resources/templates/user/ChangePassword.html
+++ b/src/main/resources/templates/user/ChangePassword.html
@@ -8,27 +8,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="../../static/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- icheck bootstrap -->
-    <link rel="stylesheet" href="../../static/AdminLTE-3.0.5/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+    <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../static/AdminLTE-3.0.5/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="/AdminLTE-3.0.5/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 <body class="hold-transition register-page">
 <div class="register-box">
     <div class="register-logo">
-        <a href="../../static/AdminLTE-3.0.5/index2.html"><b>更改账户密码</b></a>
+        <a href="/AdminLTE-3.0.5/index2.html"><b>更改账户密码</b></a>
     </div>
 
     <div class="card">
         <div class="card-body register-card-body">
             <p class="login-box-msg">修改密码</p>
 
-            <form action="../../static/AdminLTE-3.0.5/index.html" method="post">
+            <form action="/AdminLTE-3.0.5/index.html" method="post">
                 <div class="input-group mb-3">
                     <input type="password" class="form-control" placeholder="旧密码">
                     <div class="input-group-append">
@@ -70,10 +70,10 @@
 <!-- /.register-box -->
 
 <!-- jQuery -->
-<script src="../../static/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="../../static/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../../static/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
+<script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
 </body>
 </html>
