--- a/src/main/resources/templates/user/UserProfile.html
+++ b/src/main/resources/templates/user/UserProfile.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="../../static/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../static/AdminLTE-3.0.5/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="/AdminLTE-3.0.5/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -26,7 +26,7 @@
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="../../static/AdminLTE-3.0.5/index3.html" class="nav-link">Home</a>
+                <a href="/AdminLTE-3.0.5/index3.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
                 <a href="#" class="nav-link">Contact</a>
@@ -57,7 +57,7 @@
                     <a href="#" class="dropdown-item">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="../../static/AdminLTE-3.0.5/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                            <img src="/AdminLTE-3.0.5/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     Brad Diesel
@@ -73,7 +73,7 @@
                     <a href="#" class="dropdown-item">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="../../static/AdminLTE-3.0.5/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+                            <img src="/AdminLTE-3.0.5/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     John Pierce
@@ -89,7 +89,7 @@
                     <a href="#" class="dropdown-item">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="../../static/AdminLTE-3.0.5/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+                            <img src="/AdminLTE-3.0.5/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     Nora Silvester
@@ -144,8 +144,8 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a href="../../static/AdminLTE-3.0.5/index3.html" class="brand-link">
-            <img src="../../static/AdminLTE-3.0.5/dist/img/AdminLTELogo.png"
+        <a href="/AdminLTE-3.0.5/index3.html" class="brand-link">
+            <img src="/AdminLTE-3.0.5/dist/img/AdminLTELogo.png"
                  alt="AdminLTE Logo"
                  class="brand-image img-circle elevation-3"
                  style="opacity: .8">
@@ -157,7 +157,7 @@
             <!-- Sidebar user (optional) -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                 <div class="image">
-                    <img src="../../static/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                    <img src="/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                 </div>
                 <div class="info">
                     <a href="#" class="d-block">Alexander Pierce</a>
@@ -270,7 +270,7 @@
                             <div class="card-body box-profile">
                                 <div class="text-center">
                                     <img class="profile-user-img img-fluid img-circle"
-                                         src="../../static/AdminLTE-3.0.5/dist/img/user4-128x128.jpg"
+                                         src="/AdminLTE-3.0.5/dist/img/user4-128x128.jpg"
                                          alt="User profile picture">
                                 </div>
 
@@ -412,7 +412,7 @@
                                         <!-- Post -->
                                         <div class="post">
                                             <div class="user-block">
-                                                <img class="img-circle img-bordered-sm" src="../../static/AdminLTE-3.0.5/dist/img/user4-128x128.jpg" alt="User Image">
+                                                <img class="img-circle img-bordered-sm" src="/AdminLTE-3.0.5/dist/img/user4-128x128.jpg" alt="User Image">
                                                 <span class="username">
                           <a href="#">Adam Jones</a>
                           <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
@@ -422,19 +422,19 @@
                                             <!-- /.user-block -->
                                             <div class="row mb-3">
                                                 <div class="col-sm-6">
-                                                    <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
+                                                    <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
                                                 </div>
                                                 <!-- /.col -->
                                                 <div class="col-sm-6">
                                                     <div class="row">
                                                         <div class="col-sm-6">
-                                                            <img class="img-fluid mb-3" src="../../static/AdminLTE-3.0.5/dist/img/photo2.png" alt="Photo">
-                                                            <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo3.jpg" alt="Photo">
+                                                            <img class="img-fluid mb-3" src="/AdminLTE-3.0.5/dist/img/photo2.png" alt="Photo">
+                                                            <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo3.jpg" alt="Photo">
                                                         </div>
                                                         <!-- /.col -->
                                                         <div class="col-sm-6">
-                                                            <img class="img-fluid mb-3" src="../../static/AdminLTE-3.0.5/dist/img/photo4.jpg" alt="Photo">
-                                                            <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
+                                                            <img class="img-fluid mb-3" src="/AdminLTE-3.0.5/dist/img/photo4.jpg" alt="Photo">
+                                                            <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
                                                         </div>
                                                         <!-- /.col -->
                                                     </div>
@@ -458,7 +458,7 @@
                                         </div>
                                         <div class="post">
                                             <div class="user-block">
-                                                <img class="img-circle img-bordered-sm" src="../../static/AdminLTE-3.0.5/dist/img/user4-128x128.jpg" alt="User Image">
+                                                <img class="img-circle img-bordered-sm" src="/AdminLTE-3.0.5/dist/img/user4-128x128.jpg" alt="User Image">
                                                 <span class="username">
                           <a href="#">Adam Jones</a>
                           <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
@@ -468,19 +468,19 @@
                                             <!-- /.user-block -->
                                             <div class="row mb-3">
                                                 <div class="col-sm-6">
-                                                    <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
+                                                    <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
                                                 </div>
                                                 <!-- /.col -->
                                                 <div class="col-sm-6">
                                                     <div class="row">
                                                         <div class="col-sm-6">
-                                                            <img class="img-fluid mb-3" src="../../static/AdminLTE-3.0.5/dist/img/photo2.png" alt="Photo">
-                                                            <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo3.jpg" alt="Photo">
+                                                            <img class="img-fluid mb-3" src="/AdminLTE-3.0.5/dist/img/photo2.png" alt="Photo">
+                                                            <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo3.jpg" alt="Photo">
                                                         </div>
                                                         <!-- /.col -->
                                                         <div class="col-sm-6">
-                                                            <img class="img-fluid mb-3" src="../../static/AdminLTE-3.0.5/dist/img/photo4.jpg" alt="Photo">
-                                                            <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
+                                                            <img class="img-fluid mb-3" src="/AdminLTE-3.0.5/dist/img/photo4.jpg" alt="Photo">
+                                                            <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
                                                         </div>
                                                         <!-- /.col -->
                                                     </div>
@@ -504,7 +504,7 @@
                                         </div>
                                         <div class="post">
                                             <div class="user-block">
-                                                <img class="img-circle img-bordered-sm" src="../../static/AdminLTE-3.0.5/dist/img/user4-128x128.jpg" alt="User Image">
+                                                <img class="img-circle img-bordered-sm" src="/AdminLTE-3.0.5/dist/img/user4-128x128.jpg" alt="User Image">
                                                 <span class="username">
                           <a href="#">Adam Jones</a>
                           <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
@@ -514,19 +514,19 @@
                                             <!-- /.user-block -->
                                             <div class="row mb-3">
                                                 <div class="col-sm-6">
-                                                    <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
+                                                    <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
                                                 </div>
                                                 <!-- /.col -->
                                                 <div class="col-sm-6">
                                                     <div class="row">
                                                         <div class="col-sm-6">
-                                                            <img class="img-fluid mb-3" src="../../static/AdminLTE-3.0.5/dist/img/photo2.png" alt="Photo">
-                                                            <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo3.jpg" alt="Photo">
+                                                            <img class="img-fluid mb-3" src="/AdminLTE-3.0.5/dist/img/photo2.png" alt="Photo">
+                                                            <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo3.jpg" alt="Photo">
                                                         </div>
                                                         <!-- /.col -->
                                                         <div class="col-sm-6">
-                                                            <img class="img-fluid mb-3" src="../../static/AdminLTE-3.0.5/dist/img/photo4.jpg" alt="Photo">
-                                                            <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
+                                                            <img class="img-fluid mb-3" src="/AdminLTE-3.0.5/dist/img/photo4.jpg" alt="Photo">
+                                                            <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
                                                         </div>
                                                         <!-- /.col -->
                                                     </div>
@@ -651,7 +651,7 @@
                                         <!-- Post -->
                                         <div class="post">
                                             <div class="user-block">
-                                                <img class="img-circle img-bordered-sm" src="../../static/AdminLTE-3.0.5/dist/img/user1-128x128.jpg" alt="user image">
+                                                <img class="img-circle img-bordered-sm" src="/AdminLTE-3.0.5/dist/img/user1-128x128.jpg" alt="user image">
                                                 <span class="username">
                           <a href="#">Jonathan Burke Jr.</a>
                           <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
@@ -684,7 +684,7 @@
                                         <!-- Post -->
                                         <div class="post clearfix">
                                             <div class="user-block">
-                                                <img class="img-circle img-bordered-sm" src="../../static/AdminLTE-3.0.5/dist/img/user7-128x128.jpg" alt="User Image">
+                                                <img class="img-circle img-bordered-sm" src="/AdminLTE-3.0.5/dist/img/user7-128x128.jpg" alt="User Image">
                                                 <span class="username">
                           <a href="#">Sarah Ross</a>
                           <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
@@ -714,7 +714,7 @@
                                         <!-- Post -->
                                         <div class="post">
                                             <div class="user-block">
-                                                <img class="img-circle img-bordered-sm" src="../../static/AdminLTE-3.0.5/dist/img/user6-128x128.jpg" alt="User Image">
+                                                <img class="img-circle img-bordered-sm" src="/AdminLTE-3.0.5/dist/img/user6-128x128.jpg" alt="User Image">
                                                 <span class="username">
                           <a href="#">Adam Jones</a>
                           <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
@@ -724,19 +724,19 @@
                                             <!-- /.user-block -->
                                             <div class="row mb-3">
                                                 <div class="col-sm-6">
-                                                    <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
+                                                    <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
                                                 </div>
                                                 <!-- /.col -->
                                                 <div class="col-sm-6">
                                                     <div class="row">
                                                         <div class="col-sm-6">
-                                                            <img class="img-fluid mb-3" src="../../static/AdminLTE-3.0.5/dist/img/photo2.png" alt="Photo">
-                                                            <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo3.jpg" alt="Photo">
+                                                            <img class="img-fluid mb-3" src="/AdminLTE-3.0.5/dist/img/photo2.png" alt="Photo">
+                                                            <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo3.jpg" alt="Photo">
                                                         </div>
                                                         <!-- /.col -->
                                                         <div class="col-sm-6">
-                                                            <img class="img-fluid mb-3" src="../../static/AdminLTE-3.0.5/dist/img/photo4.jpg" alt="Photo">
-                                                            <img class="img-fluid" src="../../static/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
+                                                            <img class="img-fluid mb-3" src="/AdminLTE-3.0.5/dist/img/photo4.jpg" alt="Photo">
+                                                            <img class="img-fluid" src="/AdminLTE-3.0.5/dist/img/photo1.png" alt="Photo">
                                                         </div>
                                                         <!-- /.col -->
                                                     </div>
@@ -792,12 +792,12 @@
 <!-- ./wrapper -->
 
 <!-- jQuery -->
-<script src="../../static/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="../../static/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../../static/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
+<script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="../../static/AdminLTE-3.0.5/dist/js/demo.js"></script>
+<script src="/AdminLTE-3.0.5/dist/js/demo.js"></script>
 </body>
 </html>
