--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -186,7 +186,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="./ChangePassword.html" class="nav-link">
+                        <a href="/user/changepassword" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 修改密码
