初步实现了搜索功能

--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -38,7 +38,7 @@
         <!-- SEARCH FORM -->
         <form class="form-inline ml-3" action="/goods/search" target=_parent>
             <div class="input-group input-group-sm">
-                <input name="name" class="form-control form-control-navbar" type="name" placeholder="在此搜索商品" aria-label="Search">
+                <input name="search_key" class="form-control form-control-navbar" type="name" placeholder="在此搜索商品" aria-label="Search">
                 <div class="input-group-append">
                     <button class="btn btn-navbar" type="submit">
                         <i class="fas fa-search"></i>
