--- a/src/main/resources/templates/goods/details.html
+++ b/src/main/resources/templates/goods/details.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 3 | E-commerce</title>
+  <title>商品详情</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -328,7 +328,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>E-commerce</h1>
+            <h1><p class="title fl" th:text="${goodsdetails[0].goodsName}"></p></h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
@@ -348,9 +348,9 @@
         <div class="card-body">
           <div class="row">
             <div class="col-12 col-sm-6">
-              <h3 class="d-inline-block d-sm-none">LOWA Men’s Renegade GTX Mid Hiking Boots Review</h3>
+              <h3 class="d-inline-block d-sm-none"><p class="title fl" th:text="${goodsdetails[0].goodsName}"></p></h3>
               <div class="col-12">
-                <img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
+                <img id="img-result-1" th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-1.jpg'"/>
               </div>
               <div class="col-12 product-image-thumbs">
                 <div class="product-image-thumb active"><img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Product Image"></div>
@@ -361,7 +361,7 @@
               </div>
             </div>
             <div class="col-12 col-sm-6">
-              <h3 class="my-3">LOWA Men’s Renegade GTX Mid Hiking Boots Review</h3>
+              <h3 class="my-3"><p class="title fl" th:text="${goodsdetails[0].goodsName}"></p></h3>
               <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terr.</p>
 
               <hr>
@@ -429,7 +429,7 @@
 
               <div class="bg-gray py-2 px-3 mt-4">
                 <h2 class="mb-0">
-                  $80.00
+                  $<p class="title fl" th:text="${goodsdetails[0].goodsPrice}"></p>
                 </h2>
                 <h4 class="mt-0">
                   <small>Ex Tax: $80.00 </small>
